Eligibility check page

--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -46,5 +46,5 @@ block content
                                 | #{prisoner.status}
 
                         td
-                            a.button.button-secondary(href="taskList/" + prisoner.offenderNo role="button")
+                            a.button.button-secondary(href="hdc/taskList/" + prisoner.offenderNo role="button")
                                 | View
