--- a/server/views/taskList/index.pug
+++ b/server/views/taskList/index.pug
@@ -13,8 +13,8 @@ block content
 
         div#personalDetails.pure-g.borderBottom.paddingBottom
             div.pure-u-1.pure-u-md-1-4
-                if(prisonerInfo.imageId)
-                    img(src= "/public/images/placeholder.png")
+
+                img#prisonerImage(src= "/public/images/placeholder.png")
                 if(prisonerInfo.captureDate)
                     span.block.subText Uploaded: #{prisonerInfo.captureDate}
 
@@ -93,3 +93,12 @@ block content
                     input(type="hidden" name="agencyLocationId" value=prisonerInfo.agencyId || '')
                 input#continueBtn.requiredButton.button(type="submit" value="Continue")
             a#backBtn.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
+
+block append scripts
+    script(src="/public/javascripts/getImage.js?"+version)
+    script(type='text/javascript').
+        $(document).ready(function() {
+            if(#{prisonerInfo.imageId}) {
+                getAndReplaceImage(#{prisonerInfo.imageId});
+            }
+        });
