Add ID for image uploaded text

--- a/server/views/taskList/index.pug
+++ b/server/views/taskList/index.pug
@@ -16,7 +16,7 @@ block content
 
                 img#prisonerImage(src= "/public/images/placeholder.png")
                 if(prisonerInfo.captureDate)
-                    span.block.subText Uploaded: #{prisonerInfo.captureDate}
+                    span.block.subText#prisonerPhotoDate Uploaded: #{prisonerInfo.captureDate}
 
             div.pure-u-1.pure-u-md-1-4
                 div.midMarginBottom
