Change location property

--- a/server/views/taskList/index.pug
+++ b/server/views/taskList/index.pug
@@ -45,8 +45,8 @@ block content
 
                 div.midMarginBottom
                     | Location
-                    if(prisonerInfo.assignedLivingUnitDesc)
-                        span#prisonerLocation.block.bold #{prisonerInfo.assignedLivingUnitDesc}
+                    if(prisonerInfo.agencyLocationDesc)
+                        span#prisonerLocation.block.bold #{prisonerInfo.agencyLocationDesc}
 
                 div.midMarginBottom
                     | Type of offence(s)
