--- a/server/views/taskList/index.pug
+++ b/server/views/taskList/index.pug
@@ -16,8 +16,10 @@ block content
 
         div#personalDetails.pure-g.borderBottom.paddingBottom
             div.pure-u-1.pure-u-md-1-4
-
-                img#prisonerImage(src= "/public/images/placeholder.png")
+                if prisonerInfo.imageId
+                    img#prisonerImage(src= "image/"+prisonerInfo.imageId)
+                else
+                    img#prisonerImage(src= "/public/images/placeholder.png")
                 if(prisonerInfo.captureDate)
                     span.block.subText#prisonerPhotoDate Uploaded: #{prisonerInfo.captureDate}
 
@@ -70,13 +72,3 @@ block content
                         span#comName.block.bold  #{prisonerInfo.comName}
 
         include eligibilitySummary
-
-block append scripts
-    script(src="/public/javascripts/getImage.js?"+version)
-    script(type='text/javascript').
-        $(document).ready(function() {
-            if(#{prisonerInfo.imageId}) {
-                getAndReplaceImage(#{prisonerInfo.imageId});
-            }
-        });
-
