--- a/server/views/taskList/index.pug
+++ b/server/views/taskList/index.pug
@@ -3,7 +3,7 @@ extends ../layout
 block content
 
     div.back-link-container
-        a.link-back(href="/") Back
+        a.link-back(href="/") Back to case list
 
     h1.heading-large Check prisoner details
     h2.heading-medium Personal details
