split eligibility form into 3 pages. Replaced investigation question with crd time remaining

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -32,6 +32,10 @@ a.button.button-secondary {
     padding-bottom: 30px;
 }
 
+.largePaddingBottom {
+    padding-bottom: 50px;
+}
+
 .smallPaddingBottom {
     padding-bottom: 10px;
 }
