--- a/server/views/eligibility/unsuitable.pug
+++ b/server/views/eligibility/unsuitable.pug
@@ -10,8 +10,8 @@ block unsuitableForm
                 label(for='sexOffender') Has a history of sexual offending but not required to register
             div.multiple-choice
                 input(type='checkbox' name='unsuitableReasons' id='deportationLiable' value='deportationLiable' checked=vals.indexOf('deportationLiable') !== -1)
-                label(for='deportationLiable') Foregin national liable to deportation but not yet served with
-                    | a decision to deport
+                label(for='deportationLiable') Foreign national liable to deportation but not yet served with
+                    |  a decision to deport
             div.multiple-choice
                 input(type='checkbox' name='unsuitableReasons' id='recalled' value='recalled' checked=vals.indexOf('recalled') !== -1)
                 label(for='recalled') Recalled for poor behaviour during a previous period of HDC
