--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -3,50 +3,8 @@ extends ../layout
 block content
     h1#pageHeading.heading-large HDC eligible prisoners
 
-    table#hdcEligiblePrisoners.largeMarginBottom
-        thead
-            tr
-                th Name
-                th NOMS ID
-                th Location
-                th HDCED
-                th CRD
-                th Current status
-                th
-        tbody
-            if hdcEligible && hdcEligible.length > 0
-                each prisoner in hdcEligible
-                    tr.hdcEligible
-                        td.name
-                            if prisoner.lastName
-                                | #{prisoner.lastName}
-                                if prisoner.firstName
-                                    | , #{prisoner.firstName}
+    if role === 'CA'
+        include CATable
 
-                        td.offenderNo
-                            if prisoner.offenderNo
-                                | #{prisoner.offenderNo}
-
-                        td.location
-                            if prisoner.internalLocationDesc
-                                | #{prisoner.internalLocationDesc}
-                            if prisoner.internalLocationDesc && prisoner.agencyLocationDesc
-                                =" - "
-                            if prisoner.agencyLocationDesc
-                                | #{prisoner.agencyLocationDesc}
-
-                        td.hdced
-                            if prisoner.sentenceDetail.homeDetentionCurfewEligibilityDate
-                                | #{prisoner.sentenceDetail.homeDetentionCurfewEligibilityDate}
-
-                        td.crd
-                            if prisoner.sentenceDetail.conditionalReleaseDate
-                                | #{prisoner.sentenceDetail.conditionalReleaseDate}
-
-                        td.status
-                            if prisoner.status
-                                | #{prisoner.status}
-
-                        td
-                            a.button.button-secondary(href="hdc/taskList/" + prisoner.offenderNo role="button")
-                                | View
+    if role === 'RO'
+        include ROTable
