added link to opt out form if eligible

--- a/server/views/taskList/eligibilitySummary.pug
+++ b/server/views/taskList/eligibilitySummary.pug
@@ -40,5 +40,6 @@ div.largeMarginBottom
                 div.pure-u-1-2.center
                     a#eligibilityCheckUpdate(href='/hdc/eligibility/'+prisonerInfo.offenderNo) Change these answers
 
-                div.pure-u-1.borderTopLight
-                    // TODO Form printed
+                // TODO Form printed
+                //div.pure-u-1.borderTopLight
+
