--- a/server/views/taskList/index.pug
+++ b/server/views/taskList/index.pug
@@ -72,3 +72,4 @@ block content
                         span#prisonerComName.block.bold  #{prisonerInfo.com}
 
         include eligibilitySummary
+        include proposedAddressSummary
