--- a/server/views/proposedAddress/optOutForm.pug
+++ b/server/views/proposedAddress/optOutForm.pug
@@ -17,17 +17,17 @@ block content
                     p Has the prisoner decided to opt out of the HDC process?
 
                     div.multiple-choice(data-target="optOutForm")
-                        input#optOutYes(type="radio" checked=optOut && optOut.decision === 'Yes' name="decision" value="Yes")
+                        input#optOutYes(type="radio" checked=data && data.decision === 'Yes' name="decision" value="Yes")
                         label(for="optOutYes") Yes
                     div.multiple-choice
-                        input#optOutNo(type="radio" checked=optOut &&optOut.decision === 'No' name="decision" value="No")
+                        input#optOutNo(type="radio" checked=data && data.decision === 'No' name="decision" value="No")
                         label(for="optOutNo") No
 
                 div#optOutForm.panel.panel-border-narrow.js-hidden
                     label(for='optOutDetails') Please give details
                     textarea(name='reason' id='optOutDetails' class='form-control' rows='4')
-                        if optOut && optOut.reason
-                            | #{optOut.reason}
+                        if data && data.reason
+                            | #{data.reason}
 
             div.paddingBottom.smallPaddingTop
                 div.pure-u-1.inlineButtons
