added proposed address form

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -110,6 +110,11 @@ a.button.button-secondary {
     padding-right: 5px;
 }
 
+.padLeftRight15 {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .padRight15 {
     padding-right: 15px;
 }
