--- a/server/views/proposedAddress/bassReferralForm.pug
+++ b/server/views/proposedAddress/bassReferralForm.pug
@@ -8,7 +8,7 @@ block content
 
         h2.heading-large BASS referral
 
-    form(method="post").pure-u-1-3
+    form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="nomisId" value=nomisId || '')
         div.smallPaddingTop.paddingBottom.largeMarginBottom
@@ -31,7 +31,4 @@ block content
                         label(for='proposedCounty') Proposed county
                         input(type='text' name='proposedCounty' id='proposedCounty' class='form-control' value=data && data.proposedCounty)
 
-            div.paddingBottom.smallPaddingTop
-                div.pure-u-1.inlineButtons
-                    input#continueBtn.requiredButton.button(type="submit" value="Save and continue")
-                    a#backBtn.requiredButton.button.button-secondary(href="/hdc/taskList/" + nomisId role="button") Return to tasklist
+            include ../includes/formButtons
