--- a/server/views/eligibility/includes/suitability.pug
+++ b/server/views/eligibility/includes/suitability.pug
@@ -1,24 +1,24 @@
 block unsuitableForm
 
-    - var vals = eligibility && eligibility.unsuitableReasons ? eligibility.unsuitableReasons : ''
+    - var vals = data.reason || ''
 
     div.pure-g
         p Select one or more reasons why the prisoner is presumed unsuitable:
         div.pure-u-5-12
             div.multiple-choice
-                input(type='checkbox' name='unsuitableReasons' id='sexOffender' value='sexOffender' checked=vals.indexOf('sexOffender') !== -1)
+                input(type='checkbox' name='reason' id='sexOffender' value='sexOffender' checked=vals.indexOf('sexOffender') !== -1)
                 label(for='sexOffender') Has a history of sexual offending but not required to register
             div.multiple-choice
-                input(type='checkbox' name='unsuitableReasons' id='deportationLiable' value='deportationLiable' checked=vals.indexOf('deportationLiable') !== -1)
+                input(type='checkbox' name='reason' id='deportationLiable' value='deportationLiable' checked=vals.indexOf('deportationLiable') !== -1)
                 label(for='deportationLiable') Foreign national liable to deportation but not yet served with
                     |  a decision to deport
             div.multiple-choice
-                input(type='checkbox' name='unsuitableReasons' id='recalled' value='recalled' checked=vals.indexOf('recalled') !== -1)
+                input(type='checkbox' name='reason' id='recalled' value='recalled' checked=vals.indexOf('recalled') !== -1)
                 label(for='recalled') Recalled for poor behaviour during a previous period of HDC
         div.pure-u-1-6
         div.pure-u-5-12
             div.multiple-choice
-                input(type='checkbox' name='unsuitableReasons' id='sentenceCategory' value='sentenceCategory' checked=vals.indexOf('sentenceCategory') !== -1)
+                input(type='checkbox' name='reason' id='sentenceCategory' value='sentenceCategory' checked=vals.indexOf('sentenceCategory') !== -1)
                 label(for='sentenceCategory') Serving a sentence for one of the following categories:
                     ul.list
                         li - Homicide
